upgrade pattern form

--- a/adressForm.html
+++ b/adressForm.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Shop</title>
+  <title>Adress Form</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/main.css">
 </head>
