--- a/itemsCard.html
+++ b/itemsCard.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Shop</title>
+  <title>Items Card</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/main.css">
 </head>
