--- a/itemsList.html
+++ b/itemsList.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Shop</title>
+  <title>Items List</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/main.css">
 </head>
